# The_Neural_News

./: .gitignore  app.py  app_rss.py  app_url.py  content_gen.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py
content/: content_gen_1.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
utils/: analyzer.py  credentials.py  gsheet_utils.py  parser.py  prompt.py  rss_fetcher.py
