[project]
name = "ai-rss-feed-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=5.4.0",
    "oauth2client>=4.1.3",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
]
